# Homework_10

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: test.yml
config/: __init__.py  celery.py  settings.py
store_app/: tasks.py  views.py
